# spdx-gen

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  release.yml
nix/: package.nix  static.nix
src/: cli.rs  licenses.rs  main.rs  update.rs
