# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "spdx-gen"
version = "0.2.2"
edition = "2021"

description = "SPDX license generator"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "GPL-3.0-only"
repository = "https://github.com/ryanccn/spdx-gen.git"

categories = ["command-line-utilities", "development-tools"]
keywords = ["license", "spdx", "generator"]

[dependencies]
anstream = "0.6.17"
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5.36"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select"] }
dirs = "5.0.1"
eyre = "0.6.12"
flate2 = "1.0.34"
humansize = "2.1.3"
owo-colors = "4.1.0"
reqwest = { version = "0.12.9", default-features = false, features = ["brotli", "gzip", "rustls-tls", "zstd"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tar = "0.4.43"
tokio = { version = "1.41.0", features = ["full"] }

[build-dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
clap_complete = "4.5.36"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

redundant_closure_for_method_calls = "allow"
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "forbid"
