# SPDX-FileCopyrightText: 2024 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "spdx-gen"
version = "0.2.2"
edition = "2024"

description = "SPDX license generator"
authors = ["Ryan Cao <hello@ryanccn.dev>"]
license = "GPL-3.0-only"
repository = "https://github.com/ryanccn/spdx-gen.git"

categories = ["command-line-utilities", "development-tools"]
keywords = ["license", "spdx", "generator"]

[dependencies]
anstream = "0.6.18"
clap = { version = "4.5.34", features = ["derive", "env"] }
clap_complete = "4.5.47"
color-eyre = "0.6.3"
crossterm = "0.28.1"
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select"] }
dirs = "6.0.0"
eyre = "0.6.12"
flate2 = "1.1.0"
humansize = "2.1.3"
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", default-features = false, features = ["brotli", "gzip", "rustls-tls", "zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version = "1.44.1", features = ["full"] }

[build-dependencies]
clap = { version = "4.5.34", features = ["derive", "env"] }
clap_complete = "4.5.47"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

redundant_closure_for_method_calls = "allow"
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "forbid"
